swagger configruration for authentication is done for login , registration , logout and fetching a user data
